k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-demo
  name: pipelines-demo
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pipelines-demo
