k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipelines-demo
  name: pipelines-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: pipelines-demo
    weight: 100
